test_regress/t/t_hier_block0_bad.out
%Error: t/t_hier_block0_bad.v:21:10: 'sub0' has hier_block metacomment, hierarchical Verilation supports only integer/floating point/string and type param parameters
                                   : ... note: In instance 't'
   21 |   sub0 #(UNPACKED) i_sub0 (
      |          ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_hier_block0_bad.v:77:39: Cannot access non-port symbols inside hierarchical block
                                   : ... note: In instance 't.i_sub0'
   77 |     $display("%m: i_sub.x: %d", i_sub.x);
      |                                       ^
%Error: t/t_hier_block0_bad.v:35:48: Cannot access non-port symbols inside hierarchical block
                                   : ... note: In instance 't'
   35 |     $display("%d i_sub0.ff: %d", count, i_sub0.ff);
      |                                                ^~
%Error: t/t_hier_block0_bad.v:36:61: Cannot access scope inside hierarchical block
   36 |     $display("%d i_sub0.i_sub.out: %d", count, i_sub0.i_sub.out);
      |                                                             ^~~
%Error: Exiting due to
